# pytorch-table-recognition

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  gen_table_label.ipynb  pyproject.toml  recognize.py  requirements-dev.txt  requirements.txt  start_api.py
api/: __init__.py  config.py  exception_handler.py  logging_handler.py  route.py
api/enums/: status_code.py  status_msg.py
api/exceptions/: file_excpetion.py
api/models/: base_response.py
api/utils/: img_util.py
dto/: line.py  table.py
enums/: stage_name.py
exceptions/: table_format.py
helpers/: config_helper.py
modules/: base.py  efficientnet_wrapper.py  fix_direction.py  fix_shape.py  recognize_table.py  recognize_tline.py  recognize_tlmap.py  unet_wrapper.py
utils/: img_util.py  json_util.py  line_util.py  point_util.py  torch_util.py  yaml_util.py
